# rdg

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  MAINPAGE.md  RDGConfig.cmake.in  README.md  annotated.html  api.html  class_r_d_g-members.html  class_r_d_g.html  classes.html  cli.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7e72c7cf48e3493f8206cd364e6bc9f6.html  dir_df511e5bd85cec96854b39d5e1c27aa8.html  expressions.html  files.html  functions.html  functions_func.html  genindex.html  globals.html  globals_func.html  group__librdg-cpp.html  group__librdg.html  index.html  installation.html  modules.html  objects.inv  python.html  rdg.pc.in  rdg_8h.html  rdg_8h_source.html  rdg_8hh.html  rdg_8hh_source.html  search.html  searchindex.js
.github/workflows/: ci.yml
_sources/: cli.rst.txt  expressions.rst.txt  python.rst.txt
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt  rdg.cpp  rdg.hh
cpp/tests/: CMakeLists.txt  test_rdg++.cpp
doc/: CMakeLists.txt  Doxyfile.in
doc/man1/: rdg.pod
doc/man3/: rdg_generate.pod
doc/sphinx/: api.rst  conf.py  index.rst  installation.rst
html/: classes.html  dir_df511e5bd85cec96854b39d5e1c27aa8.html  group__rdg.html  group__rdgpp.html  index.html  menudata.js
html/search/: all_2.js  functions_0.js  searchdata.js
python/: CMakeLists.txt  pyrdg.c  setup.py  test_pyrdg.py
python/src/: pyrdg.c
python/tests/: test_pyrdg.py
scripts/: build_ghpages.sh  ci.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  groups_0.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  lexer.l  main.c  parser.y  rdg.c  rdg.h  rdg_atom.c  rdg_atom.h  rdg_branch.c  rdg_branch.h  rdg_buffer.c  rdg_buffer.h  rdg_group.c  rdg_group.h  rdg_range.c  rdg_range.h  rdg_version.c.in
tests/: CMakeLists.txt  test_rdg.c  test_rdg_atom.c  test_rdg_group.c  test_rdg_range.c
tests/data/: expected1
tests/src/: test_rdg.c  test_rdg_branch.c  test_rdg_buffer.c  test_rdg_group.c  test_rdg_range.c
